--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
+    <script src="https://kit.fontawesome.com/cfe476c6ba.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    
 </head>
 <body>
     <header>
-        Ohmyfood
+        <img src="/images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
     </header>
+    <main>
+        <div class="location">
+            <i class="fa-solid fa-location-dot"></i>
+            <h2>Paris, Belleville</h2>
+        </div>
+    </main>
     
 </body>
 </html>
