--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+                            <!-- HEADER -->
     <header>
         <img src="/images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
     </header>
     <main>
+                            <!-- LOCATION -->
         <div class="location">
             <i class="fa-solid fa-location-dot"></i>
             <h2>Paris, Belleville</h2>
         </div>
+                            <!-- EXPLORER -->
+       <section class="explorer">
+        <h2>Réservez le menu qui vous convient</h2>
+        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+        <button class="explorer">Explorer nos restaurants</button>
+       </section>
+                            <!-- FONCTIONNEMENT -->
     </main>
     
 </body>
