--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
        <section class="explorer">
         <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <button class="explorer">Explorer nos restaurants</button>
+        <button>Explorer nos restaurants</button>
        </section>
                             <!-- FONCTIONNEMENT -->
+       <section class="Fonctionnement">
+        
+       </section>
     </main>
     
 </body>
