--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
                             <!-- HEADER -->
     <header>
-        <img src="/images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
+        <img src="./images/logo/ohmyfood.png" class="logo" alt="Logo Oh my food">
     </header>
     <main>
                             <!-- LOCATION -->
@@ -26,11 +26,16 @@
        <section class="explorer">
         <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <button>Explorer nos restaurants</button>
+        <button class="btn">Explorer nos restaurants</button>
        </section>
                             <!-- FONCTIONNEMENT -->
-       <section class="Fonctionnement">
-        
+       <section class="fonctionnement">
+        <h2>Fonctionnement</h2>
+            <ol class="choix">
+                <li><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</li>
+                <li><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
+                <li><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</li>
+            </ol>
        </section>
     </main>
     
