--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <section class="explorer">
         <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <button class="btn">Explorer nos restaurants</button>
+        <a class="btn" href="#">Explorer nos restaurants</a>
        </section>
                             <!-- FONCTIONNEMENT -->
        <section class="fonctionnement">
