Renommage des photos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <section class="explorer">
         <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <a class="btn" href="#">Explorer nos restaurants</a>
+        <a class="btn" href="#restaurant">Explorer nos restaurants</a>
        </section>
                             <!-- FONCTIONNEMENT -->
        <section class="fonctionnement">
@@ -36,6 +36,15 @@
                 <li><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
                 <li><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</li>
             </ol>
+       </section>
+       <section class="restaurants" id="restaurant">
+        <h2>Restaurants</h2>
+        <div class="restaurants-cards">
+            <article class="card">
+                <img src="./images/restaurants/La palette du goût.jpg" alt="Table du restaurant la palette du goût">
+            </article>
+
+        </div>
        </section>
     </main>
     
