Progression de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <img src="./images/logo/ohmyfood.png" class="logo" alt="Logo Oh my food">
     </header>
     <main>
-                            <!-- LOCATION -->
-        <div class="location">
+                            <!-- EMPLACEMENT -->
+        <div class="emplacement">
             <i class="fa-solid fa-location-dot"></i>
             <h2>Paris, Belleville</h2>
         </div>
@@ -37,16 +37,66 @@
                 <li><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</li>
             </ol>
        </section>
+                            <!-- RESTAURANTS -->
        <section class="restaurants" id="restaurant">
         <h2>Restaurants</h2>
         <div class="restaurants-cards">
             <article class="card">
-                <img src="./images/restaurants/La palette du goût.jpg" alt="Table du restaurant la palette du goût">
+                <a href="#">
+                    <img src="./images/restaurants/La palette du goût.jpg" alt="Table du restaurant la palette du goût">
+                    <div class="card-content">
+                    <div class="card-text">
+                        <h3 class="card-title">La palette du goût</h3>
+                        <p class="card-subtitle">Ménilmontant</p>
+                    </div>
+                </div>
+                </a>
             </article>
-
+            <article class="card">
+                <a href="#">
+                    <img src="./images/restaurants/La note enchantée.jpg" alt="Table du restaurant La note enchantée">
+                    <div class="card-content">
+                    <div class="card-text">
+                        <h3 class="card-title">La note enchantée</h3>
+                        <p class="card-subtitle">Charonne</p>
+                    </div>
+                </div>
+                </a>
+            </article>
+            <article class="card">
+                <a href="#">
+                    <img src="./images/restaurants/À la française.jpg" alt="Table du restaurant À la française">
+                    <div class="card-content">
+                    <div class="card-text">
+                            <h3 class="card-title">À la française</h3>
+                            <p class="card-subtitle">Cité rouge</p>
+                    </div>
+                </div>
+                </a>
+            </article>
+            <article class="card">
+                <a href="#">
+                    <img src="./images/restaurants/Le délice des sens.jpg" alt="Table du restaurant Le délice des sens">
+                    <div class="card-content">
+                    <div class="card-text">
+                        <h3 class="card-title">Le délice des sens</h3>
+                        <p class="card-subtitle">Folie-Méricourt</p>
+                    </div>
+                    </div>
+                </a>
+            </article>
         </div>
        </section>
     </main>
-    
+                            <!-- FOOTER -->
+        <footer>
+            <h4>Ohmyfood</h4>
+            <ul>
+                <li><a href="#">Proposer un restaurant</a></li>
+                <li><a href="#">Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </footer>    
 </body>
 </html>
