Ajout des variables dans le scss

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
                             <!-- HEADER -->
     <header>
-        <img src="./images/logo/ohmyfood.png" class="logo" alt="Logo Oh my food">
+        <img src="./images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
     </header>
     <main>
                             <!-- EMPLACEMENT -->
@@ -43,6 +43,7 @@
         <div class="restaurants-cards">
             <article class="card">
                 <a href="#">
+                    <span class="nouveau">Nouveau</span>
                     <img src="./images/restaurants/La palette du goût.jpg" alt="Table du restaurant la palette du goût">
                     <div class="card-content">
                     <div class="card-text">
@@ -54,6 +55,7 @@
             </article>
             <article class="card">
                 <a href="#">
+                    <span class="nouveau">Nouveau</span>
                     <img src="./images/restaurants/La note enchantée.jpg" alt="Table du restaurant La note enchantée">
                     <div class="card-content">
                     <div class="card-text">
