Ajout du fichier variables.scss et partie fonctionnement terminée

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
        <section class="fonctionnement">
         <h2>Fonctionnement</h2>
             <ol class="choix">
-                <li><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</li>
-                <li><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
-                <li><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</li>
+                <li><span class="nombre">1</span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</li>
+                <li><span class="nombre">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
+                <li><span class="nombre">3</span><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</li>
             </ol>
        </section>
                             <!-- RESTAURANTS -->
