Mise en anglais

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <img src="./images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
     </header>
     <main>
-                            <!-- EMPLACEMENT -->
-        <div class="emplacement">
+                            <!-- LOCATION -->
+        <div class="location">
             <i class="fa-solid fa-location-dot"></i>
             <h2>Paris, Belleville</h2>
         </div>
@@ -28,13 +28,13 @@
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
         <a class="btn" href="#restaurant">Explorer nos restaurants</a>
        </section>
-                            <!-- FONCTIONNEMENT -->
-       <section class="fonctionnement">
+                            <!-- FUNCTIONING -->
+       <section class="functioning">
         <h2>Fonctionnement</h2>
-            <ol class="choix">
-                <li><span class="nombre">1</span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</li>
-                <li><span class="nombre">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
-                <li><span class="nombre">3</span><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</li>
+            <ol class="choice">
+                <li><span class="number">1</span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</li>
+                <li><span class="number">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
+                <li><span class="number">3</span><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</li>
             </ol>
        </section>
                             <!-- RESTAURANTS -->
@@ -43,7 +43,7 @@
         <div class="restaurants-cards">
             <article class="card">
                 <a href="#">
-                    <span class="nouveau">Nouveau</span>
+                    <span class="new">Nouveau</span>
                     <img src="./images/restaurants/La palette du goût.jpg" alt="Table du restaurant la palette du goût">
                     <div class="card-content">
                     <div class="card-text">
@@ -55,7 +55,7 @@
             </article>
             <article class="card">
                 <a href="#">
-                    <span class="nouveau">Nouveau</span>
+                    <span class="new">Nouveau</span>
                     <img src="./images/restaurants/La note enchantée.jpg" alt="Table du restaurant La note enchantée">
                     <div class="card-content">
                     <div class="card-text">
