Ajout de la partie restaurants

--- a/index.html
+++ b/index.html
@@ -27,78 +27,80 @@
         <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
         <a class="btn" href="#restaurant">Explorer nos restaurants</a>
-       </section>
-                            <!-- FUNCTIONING -->
-       <section class="functioning">
+    </section>
+    <!-- FUNCTIONING -->
+    <section class="functioning">
         <h2>Fonctionnement</h2>
-            <ol class="choice">
-                <li><span class="number">1</span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</li>
-                <li><span class="number">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
-                <li><span class="number">3</span><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</li>
-            </ol>
-       </section>
-                            <!-- RESTAURANTS -->
-       <section class="restaurants" id="restaurant">
+        <ol class="choice">
+            <li><span class="number">1</span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</li>
+            <li><span class="number">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
+            <li><span class="number">3</span><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</li>
+        </ol>
+    </section>
+    <!-- RESTAURANTS -->
+    <section class="restaurants" id="restaurant">
         <h2>Restaurants</h2>
         <div class="restaurants-cards">
-            <article class="card">
-                <a href="#">
+            <div class="cards">
+                <article class="card">
+                    <a href="#">
                     <span class="new">Nouveau</span>
-                    <img src="./images/restaurants/La palette du goût.jpg" alt="Table du restaurant la palette du goût">
-                    <div class="card-content">
-                    <div class="card-text">
-                        <h3 class="card-title">La palette du goût</h3>
-                        <p class="card-subtitle">Ménilmontant</p>
-                    </div>
-                </div>
-                </a>
-            </article>
-            <article class="card">
-                <a href="#">
+                        <img src="./images/restaurants/La palette du goût.jpg" alt="Table du restaurant la palette du goût">
+                        <div class="card-content">
+                            <div class="card-text">
+                                <h3 class="card-title">La palette du goût</h3>
+                                <p class="card-subtitle">Ménilmontant</p>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+                <article class="card">
+                    <a href="#">
                     <span class="new">Nouveau</span>
-                    <img src="./images/restaurants/La note enchantée.jpg" alt="Table du restaurant La note enchantée">
-                    <div class="card-content">
-                    <div class="card-text">
-                        <h3 class="card-title">La note enchantée</h3>
-                        <p class="card-subtitle">Charonne</p>
-                    </div>
-                </div>
-                </a>
-            </article>
-            <article class="card">
-                <a href="#">
-                    <img src="./images/restaurants/À la française.jpg" alt="Table du restaurant À la française">
-                    <div class="card-content">
-                    <div class="card-text">
-                            <h3 class="card-title">À la française</h3>
-                            <p class="card-subtitle">Cité rouge</p>
-                    </div>
-                </div>
-                </a>
-            </article>
-            <article class="card">
-                <a href="#">
-                    <img src="./images/restaurants/Le délice des sens.jpg" alt="Table du restaurant Le délice des sens">
-                    <div class="card-content">
-                    <div class="card-text">
-                        <h3 class="card-title">Le délice des sens</h3>
-                        <p class="card-subtitle">Folie-Méricourt</p>
-                    </div>
-                    </div>
-                </a>
-            </article>
+                        <img src="./images/restaurants/La note enchantée.jpg" alt="Table du restaurant La note enchantée">
+                        <div class="card-content">
+                            <div class="card-text">
+                                <h3 class="card-title">La note enchantée</h3>
+                                <p class="card-subtitle">Charonne</p>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+                <article class="card">
+                    <a href="#">
+                        <img src="./images/restaurants/À la française.jpg" alt="Table du restaurant À la française">
+                        <div class="card-content">
+                            <div class="card-text">
+                                <h3 class="card-title">À la française</h3>
+                                <p class= "card-subtitle">Cité rouge</p>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+                <article class="card">
+                    <a href="#">
+                        <img src="./images/restaurants/Le délice des sens.jpg" alt="Table du restaurant Le délice des sens">
+                        <div class="card-content">
+                            <div class="card-text">
+                                <h3 class="card-title">Le délice des sens</h3>
+                                <p class="card-subtitle">Folie-Méricourt</p>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+            </div>
         </div>
-       </section>
-    </main>
-                            <!-- FOOTER -->
-        <footer>
-            <h4>Ohmyfood</h4>
-            <ul>
-                <li><a href="#">Proposer un restaurant</a></li>
-                <li><a href="#">Devenir partenaire</a></li>
-                <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </footer>    
+    </section>
+</main>
+<!-- FOOTER -->
+<footer>
+    <h4>Ohmyfood</h4>
+    <ul>
+        <li><a href="#">Proposer un restaurant</a></li>
+        <li><a href="#">Devenir partenaire</a></li>
+        <li><a href="#">Mentions légales</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</footer>    
 </body>
 </html>
