Page d'accueil sans les animations

--- a/index.html
+++ b/index.html
@@ -43,13 +43,16 @@
         <div class="restaurants-cards">
             <div class="cards">
                 <article class="card">
-                    <a href="#">
+                    <a href="pages restaurants/menu_la_palette_du_gout.html">
                     <span class="new">Nouveau</span>
                         <img src="./images/restaurants/La palette du goût.jpg" alt="Table du restaurant la palette du goût">
                         <div class="card-content">
                             <div class="card-text">
                                 <h3 class="card-title">La palette du goût</h3>
                                 <p class="card-subtitle">Ménilmontant</p>
+                            </div>
+                            <div class="heart">
+                                <i class="fa-regular fa-heart fa-xl"></i>
                             </div>
                         </div>
                     </a>
@@ -63,6 +66,9 @@
                                 <h3 class="card-title">La note enchantée</h3>
                                 <p class="card-subtitle">Charonne</p>
                             </div>
+                            <div class="heart">
+                                <i class="fa-regular fa-heart fa-xl"></i>
+
                         </div>
                     </a>
                 </article>
@@ -74,6 +80,9 @@
                                 <h3 class="card-title">À la française</h3>
                                 <p class= "card-subtitle">Cité rouge</p>
                             </div>
+                            <div class="heart">
+                                <i class="fa-regular fa-heart fa-xl"></i>
+
                         </div>
                     </a>
                 </article>
@@ -85,6 +94,10 @@
                                 <h3 class="card-title">Le délice des sens</h3>
                                 <p class="card-subtitle">Folie-Méricourt</p>
                             </div>
+                            <div class="heart">
+                                <i class="fa-regular fa-heart fa-xl"></i>
+
+
                         </div>
                     </a>
                 </article>
@@ -96,10 +109,10 @@
 <footer>
     <h4>Ohmyfood</h4>
     <ul>
-        <li><a href="#">Proposer un restaurant</a></li>
-        <li><a href="#">Devenir partenaire</a></li>
+        <li class="icone-footer"><i class="fa-solid fa-utensils fa-sm"></i><span>Proposer un restaurant</span></li>
+        <li class="icone-footer"><i class="fa-solid fa-handshake-angle fa-xs"></i><span>Devenir partenaire</span></li>
         <li><a href="#">Mentions légales</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="mailto:Ohmyfood-services-clients@gmail.com">Contact</a></li>
     </ul>
 </footer>    
 </body>
