probleme entre page d'accueil et page menu restaurant

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </a>
                 </article>
                 <article class="card">
-                    <a href="#">
+                    <a href="pages restaurants/menu_la_note_enchantee.html">
                     <span class="new">Nouveau</span>
                         <img src="./images/restaurants/La note enchantée.jpg" alt="Table du restaurant La note enchantée">
                         <div class="card-content">
@@ -73,7 +73,7 @@
                     </a>
                 </article>
                 <article class="card">
-                    <a href="#">
+                    <a href="pages restaurants/menu_a_la_francaise.html">
                         <img src="./images/restaurants/À la française.jpg" alt="Table du restaurant À la française">
                         <div class="card-content">
                             <div class="card-text">
@@ -87,7 +87,7 @@
                     </a>
                 </article>
                 <article class="card">
-                    <a href="#">
+                    <a href="pages restaurants/menu_le_delice_des_sens.html">
                         <img src="./images/restaurants/Le délice des sens.jpg" alt="Table du restaurant Le délice des sens">
                         <div class="card-content">
                             <div class="card-text">
