--- a/pages restaurants/menu_la_palette_du_gout.html
+++ b/pages restaurants/menu_la_palette_du_gout.html
@@ -13,6 +13,37 @@
 
 </head>
 <body>
+                            <!-- HEADER -->
+    <header>
+        <a href="../index.html" class="btn-return"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
+        <img src="../images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
+    </header>
+    <main>
+        <img src="../images/restaurants/La palette du goût.jpg" class="image" alt="La palette du goût">
+        <div class="menu">
+            <div class="menu-title">
+                <h2>La palette du goût</h2>
+                <div class="heart">
+                    <i class="fa-regular fa-heart fa-xl"></i>
+                </div>
+            </div>
+            <div class="formule">
+                <div class="entrees">
+                    <h3>ENTRÉES</h3>
+                    <section class="cards">
+                    <div class="card">
+                        <div class="card-content">
+                            <h4 class="card-title">Fricassée d'escargots</h4>
+                            <p class="card-subtitle">Au piment d'Espelette
+                                <span  class="price">25€</span>
+                            </p>
+                        </div>
+                    </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
