modification de la balise class en (menu-heart)

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div class="restaurants-cards">
             <div class="cards">
                 <article class="card">
-                    <a href="pages restaurants/menu_la_palette_du_gout.html">
+                    <a href="restaurants/menu_la_palette_du_gout.html">
                     <span class="new">Nouveau</span>
-                        <img src="./images/restaurants/La palette du goût.jpg" alt="Table du restaurant la palette du goût">
+                        <img src="./images/restaurants/La-palette-du-goût.jpg" alt="Table du restaurant la palette du goût">
                         <div class="card-content">
                             <div class="card-text">
                                 <h3 class="card-title">La palette du goût</h3>
@@ -58,9 +58,9 @@
                     </a>
                 </article>
                 <article class="card">
-                    <a href="pages restaurants/menu_la_note_enchantee.html">
+                    <a href="restaurants/menu_la_note_enchantee.html">
                     <span class="new">Nouveau</span>
-                        <img src="./images/restaurants/La note enchantée.jpg" alt="Table du restaurant La note enchantée">
+                        <img src="./images/restaurants/La-note-enchantée.jpg" alt="Table du restaurant La note enchantée">
                         <div class="card-content">
                             <div class="card-text">
                                 <h3 class="card-title">La note enchantée</h3>
@@ -68,13 +68,13 @@
                             </div>
                             <div class="heart">
                                 <i class="fa-regular fa-heart fa-xl"></i>
-
+                            </div>
                         </div>
                     </a>
                 </article>
                 <article class="card">
-                    <a href="pages restaurants/menu_a_la_francaise.html">
-                        <img src="./images/restaurants/À la française.jpg" alt="Table du restaurant À la française">
+                    <a href="restaurants/menu_a_la_francaise.html">
+                        <img src="./images/restaurants/À-la-française.jpg" alt="Table du restaurant À la française">
                         <div class="card-content">
                             <div class="card-text">
                                 <h3 class="card-title">À la française</h3>
@@ -82,13 +82,13 @@
                             </div>
                             <div class="heart">
                                 <i class="fa-regular fa-heart fa-xl"></i>
-
+                            </div>
                         </div>
                     </a>
                 </article>
                 <article class="card">
-                    <a href="pages restaurants/menu_le_delice_des_sens.html">
-                        <img src="./images/restaurants/Le délice des sens.jpg" alt="Table du restaurant Le délice des sens">
+                    <a href="restaurants/menu_le_delice_des_sens.html">
+                        <img src="./images/restaurants/Le-délice-des-sens.jpg" alt="Table du restaurant Le délice des sens">
                         <div class="card-content">
                             <div class="card-text">
                                 <h3 class="card-title">Le délice des sens</h3>
@@ -96,8 +96,7 @@
                             </div>
                             <div class="heart">
                                 <i class="fa-regular fa-heart fa-xl"></i>
-
-
+                            </div>
                         </div>
                     </a>
                 </article>
