--- a/restaurants/menu_la_palette_du_gout.html
+++ b/restaurants/menu_la_palette_du_gout.html
@@ -19,11 +19,11 @@
         <img src="../images/logo/ohmyfood@2x.svg" class="logo" alt="Logo Oh my food">
     </header>
     <main>
-        <img src="../images/restaurants/La palette du goût.jpg" class="image" alt="La palette du goût">
+        <img src="../images/restaurants/La-palette-du-goût.jpg" class="image" alt="La palette du goût">
         <div class="menu">
             <div class="menu-title">
                 <h2>La palette du goût</h2>
-                <div class="heart">
+                <div class="menu-heart">
                     <i class="fa-regular fa-heart fa-xl"></i>
                 </div>
             </div>
