Ajout des 4 pages des restaurants

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <section class="explorer">
         <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <a class="btn" href="#restaurant">Explorer nos restaurants</a>
+        <a href="#restaurant" class="btn">Explorer nos restaurants</a>
     </section>
     <!-- FUNCTIONING -->
     <section class="functioning">
