--- a/restaurants/menu_la_palette_du_gout.html
+++ b/restaurants/menu_la_palette_du_gout.html
@@ -28,22 +28,114 @@
                 </div>
             </div>
             <div class="formule">
-                <div class="entrees">
+                <div class="formule-title">
                     <h3>ENTRÉES</h3>
-                    <section class="cards">
-                    <div class="card">
+                    <section class="menu-cards">
+                    <div class="menu-card">
                         <div class="card-content">
                             <h4 class="card-title">Fricassée d'escargots</h4>
-                            <p class="card-subtitle">Au piment d'Espelette
-                                <span  class="price">25€</span>
-                            </p>
+                            <div class="menu-card-text">
+                                <span>Au piment d'Espelette</span>
+                                <span class="price">25€</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <div class="card-content">
+                            <h4 class="card-title">Foie gras de canard mi-cuit</h4>
+                            <div class="menu-card-text">
+                                <span>Et ses copeaux de truffe noire</span>
+                                <span class="price">35€</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <div class="card-content">
+                            <h4 class="card-title">Oeuf au plat</h4>
+                            <div class="menu-card-text">
+                                <span>Assaisonné à la truffe sur lit de caviar</span>
+                                <span class="price">20€</span>
+                            </div>
                         </div>
                     </div>
                     </section>
                 </div>
+                <div class="formule-title">
+                    <h3>PLATS</h3>
+                    <section class="menu-cards">
+                    <div class="menu-card">
+                        <div class="card-content">
+                            <h4 class="card-title">Filet de boeuf aux herbes</h4>
+                            <div class="menu-card-text">
+                                <span>Accompagné de sa ribambelle de légumes</span>
+                                <span class="price">40€</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <div class="card-content">
+                            <h4 class="card-title">Parmentier de queue de boeuf</h4>
+                            <div class="menu-card-text">
+                                <span>À la truffe noire sur sa purée de panais</span>
+                                <span class="price">35€</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <div class="card-content">
+                            <h4 class="card-title">Filet de turbot</h4>
+                            <div class="menu-card-text">
+                                <span>Aux agrumes</span>
+                                <span class="price">44€</span>
+                            </div>
+                        </div>
+                    </div>
+                    </section>
+                </div>
+                <div class="formule-title">
+                    <h3>DESSERTS</h3>
+                    <section class="menu-cards">
+                    <div class="menu-card">
+                        <div class="card-content">
+                            <h4 class="card-title">Paris-Brest</h4>
+                            <div class="menu-card-text">
+                                <span>Revisité</span>
+                                <span class="price">18€</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <div class="card-content">
+                            <h4 class="card-title">Macaron au chocolat d'exception</h4>
+                            <div class="menu-card-text">
+                                <span>Et glace à la vanille de Madagascar</span>
+                                <span class="price">22€</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <div class="card-content">
+                            <h4 class="card-title">Mousse au chocolat</h4>
+                            <div class="menu-card-text">
+                                <span>Au piment d'Espelette et à la truffe noire</span>
+                                <span class="price">23€</span>
+                            </div>
+                        </div>
+                    </div>
+                    </section>
+                </div>
+                <a href="#" class="btn">Commander</a>
             </div>
         </div>
     </main>
-    
+    <footer>
+        <h4>Ohmyfood</h4>
+        <ul>
+            <li class="icone-footer"><i class="fa-solid fa-utensils fa-sm"></i><span>Proposer un restaurant</span></li>
+            <li class="icone-footer"><i class="fa-solid fa-handshake-angle fa-xs"></i><span>Devenir partenaire</span></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:Ohmyfood-services-clients@gmail.com">Contact</a></li>
+        </ul>    
+    </footer>
 </body>
 </html>
