Ajout des 4 pages des restaurants modifications des menus

--- a/restaurants/menu_le_delice_des_sens.html
+++ b/restaurants/menu_le_delice_des_sens.html
@@ -51,10 +51,10 @@
                     </div>
                     <div class="menu-card">
                         <div class="card-content">
-                            <h4 class="card-title">Poulet rôti aux herbes de Provence</h4>
+                            <h4 class="card-title">Velouté de cèpes</h4>
                             <div class="menu-card-text">
-                                <span>Et sa crème de truffe</span>
-                                <span class="price">40€</span>
+                                <span>Aux truffes</span>
+                                <span class="price">20€</span>
                             </div>
                         </div>
                     </div>
@@ -97,9 +97,9 @@
                     <section class="menu-cards">
                     <div class="menu-card">
                         <div class="card-content">
-                            <h4 class="card-title">Macaron noisette et chocolat</h4>
+                            <h4 class="card-title">Farandole de desserts</h4>
                             <div class="menu-card-text">
-                                <span>Glace au caramel brun et sel de Guérande</span>
+                                <span>Du chef</span>
                                 <span class="price">18€</span>
                             </div>
                         </div>
